Fix too small important info block

--- a/src/application/renderers/title-page/top-block/top-block.scss
+++ b/src/application/renderers/title-page/top-block/top-block.scss
@@ -5,8 +5,8 @@
  */
 
 div.title-page div.pinned-data-block {
-    position: relative;
     display: flex;
+    position: relative;
 
     overflow: hidden;
     flex-direction: row;
@@ -24,10 +24,10 @@ div.title-page div.pinned-data-block {
     div.background-image {
         display: block;
 
+        z-index: 1;
+
         top: 0;
         left: 0;
-
-        z-index: 1;
 
         overflow: hidden;
         width: 100%;
@@ -121,6 +121,7 @@ div.title-page div.pinned-data-block {
         max-width: 380px;
         height: fit-content;
 
+        min-height: 420px;
         max-height: 100%;
 
         margin-right: -1px;
@@ -134,6 +135,11 @@ div.title-page div.pinned-data-block {
 
             button {
                 border-radius: 0;
+
+                span.text {
+                    font-size: 18px;
+                    font-weight: 700;
+                }
             }
         }
 
@@ -168,6 +174,21 @@ div.title-page div.pinned-data-block {
             overflow: hidden;
             overflow-y: auto;
             height: 100%;
+
+            &::-webkit-scrollbar, &::-webkit-scrollbar-track {
+                width: 4px;
+                background: transparent;
+            }
+
+            &::-webkit-scrollbar-thumb {
+                opacity: .2;
+                border-radius: 4px;
+                background: rgba(#CCC, .4);
+            }
+
+            &:hover::-webkit-scrollbar-thumb {
+                background: rgba(#CCC, .5);
+            }
 
             article.important-data-block {
                 width: 100%;
